<resources>
    <string name="app_name">Khadamat</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Mot De Passe</string>
    <string name="adress_phone">Mot De Passe</string>
    <string name="Modifier_fonnee_btn">Modifier</string>
    <string name="email_phone">Email Adresse / Numéro de Téléphone</string>
    <string name="login">Se connecter</string>
    <string name="forgot_password">Mot De Passe Oublié !</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="vote">votes</string>
    <string name="edit_profile">Editer votre Profile</string>
    <string name="description">Description</string>
    <string name="voir_plus">voir plus</string>
    <string name="ville_client">Ville  </string>
    <string name="desc">Description</string>
    <string name="already_a_user">Vous etes Deja Inscrit? </string>
    <string name="Mes_donnees_Personnelles">Mes donnees Personnelles</string>
    <string name="fonctionalite">Fonctionnalite : </string>
    <string name="Modifier_donnees">Modifier Mes Donnees</string>
    <string name="tel_email_client">Telephone / Email  </string>
    <string name="settings">Acceder A Settings</string>
    <string name="selectionner_une_image">Selectionner Une Image</string>
    <string name="cin_mod">CIN</string>
    <string name="Evaluer">Evaluer</string>
    <string name="new_user">Un nouvel utilisateur ? </string>
    <string name="register_now">Créer Un Compte</string>
    <string-array name="filtrage">
        <item>Filtrer Par</item>
        <item>Nom</item>
        <item>Ville</item>
    </string-array>

    <string-array name="ville">
        <item>Choisir Ville</item>
        <item>Rabat</item>
        <item>Kenitra</item>
        <item>Kenitra</item>
        <item>Kenitra</item>
        <item>Kenitra</item>
        <item>Kenitra</item>
    </string-array>
</resources>