<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CurrentProfile">

    <RelativeLayout
        android:id="@+id/rellay10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_border"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/text_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="17dp"

            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/Mes_donnees_Personnelles"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rellay10"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_border">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:elevation="10dp"
                android:layout_marginTop="-5dp"
                app:cardCornerRadius="300dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_supervised_user_circle_24"  />

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_nom1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="Prenom"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-light"
                android:text="Nom"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/rellay2"
        android:layout_below="@id/rellay1" >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/btnHeart"
                android:layout_width="28dp"
                android:layout_marginEnd="10dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_home_24" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:maxLines="3"
                        android:text="@string/ville_client"
                        android:textColor="@color/blueTxt"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Salé"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rellay3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay2" >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/btnEMila"
                android:layout_width="28dp"
                android:layout_marginEnd="10dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/email" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_nmu_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:maxLines="3"
                        android:text="@string/tel_email_client"
                        android:textColor="@color/blueTxt"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0620124578"

                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/rellay4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/rellay3"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="121dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/btnEditProf"
            android:layout_width="34dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <TextView
            android:id="@+id/EditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Modifier_donnees"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="233dp"
        android:alpha="0.2"
        android:background="#585858" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/rellay4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/btnsetting"
            android:layout_width="34dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/SettngsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="181dp"
        android:alpha="0.2"
        android:background="#585858" />

    <include
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/SettngsText"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="1dp" />

</RelativeLayout>