<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CurrentProfile">



    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="35dip"
        android:layout_height="35dip"
        android:layout_gravity="left"
        android:background="@drawable/fleche"
        android:clickable="true"
        android:onClick="onBackClick"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />




    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/image_border">
            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="-10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="Ibrahim"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.786" />

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="73dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:text="nahi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.786" />


        </LinearLayout>



        <TextView
            android:id="@+id/employeeVille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="Kenitra "
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />




    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="478dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_white"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909">

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:isIndicator="true"
            android:progressTint="#ffd700"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:stepSize="0.5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="177dp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2.3"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:text="."
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/ratingSumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:text="2.3"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ratings"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="327dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="268dp">


        <TextView
            android:id="@+id/yourrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_weight="3"
            android:text="@string/Evaluer"
            android:textColor="@color/grey"
            android:textSize="24sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:progressTint="#ffd700"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="177dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/rellay1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/backgroundloginonsc"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/heartf"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fav" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:text="Description:"
                    android:textColor="@color/TxthomeColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text=" 8ans d'expériences"

                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!--            <TextView-->
                <!--                android:id="@+id/idTest"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_weight="1"-->
                <!--                android:text=" id"-->

                <!--                android:textAlignment="textStart"-->
                <!--                android:textColor="@color/black"-->
                <!--                android:textSize="20sp" />-->
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_home_24" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="Ville:"
                android:textColor="@color/TxthomeColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salé"

                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:alpha="0.2"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="Num tel/email:"
                android:textColor="@color/TxthomeColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0620124578"

                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="0dp"
            android:alpha="0.2"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="@string/cin_mod"
                android:textColor="@color/TxthomeColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="AE121245"

                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_work_24" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="@string/fonctionalite"
                android:textColor="@color/TxthomeColor"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/employee_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="AE121245"

                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="0dp"
            android:alpha="0.2"
            android:background="#585858" />


        <TextView
            android:id="@+id/idTVResponse"
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <!--        <Button-->
        <!--            android:id="@+id/buttonRat"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:text="rate"-->
        <!--            />-->

    </LinearLayout>




    <!--    <include-->
    <!--        android:id="@+id/include2"-->
    <!--        layout="@layout/footer_layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        tools:layout_editor_absoluteX="78dp"-->
    <!--        tools:layout_editor_absoluteY="730dp" />-->


</RelativeLayout>